# scrapy_hw

hw1/: pyproject.toml
hw1/project/project/: items.py  json_result.jsonlines
hw1/project/project/spiders/: spider_merch.py
hw2/: docker-compose.yaml  pyproject.toml
hw2/project/: data.jsonl  fastapi_service.py  items.py  pipelines.py  settings.py
hw2/project/spiders/: book_spider.py
